--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <br><br>
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/iananananan">Stream B</a>
+        <br><br>
+        <a class="button button-primary" href="food.html">food!</a>
+        <br><br>
       </div>
     </div>
   </div>
