--- a/food.html
+++ b/food.html
@@ -62,6 +62,7 @@
             Basil Thai — best thai nearby<br>
             Merry Ann's — Traditional american Diner, Tucker's fave<br><br>
           <h5>You *need* a car Far</h5>
+			Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
             Himilayan Chimney — New indian place<br>
