add stuff to do page

--- a/food.html
+++ b/food.html
@@ -43,6 +43,7 @@
             Cravings — Insanely close. Notorious. Beloved. <br>
             Spicy Tang — Naohiro's favorite<br>
             Cocomero — Best froyo you'll ever have, Ian n RedzoneX/Will's favorite <br>
+            Paris Super — Thai ice cream and ice cream crepes. Close contender for best ice cream. <br>
             Ozu Ramen — StoryTime/Kristian's favorite <br>
             Jip Bap — Korean Bowls, Benpai's favorite<br>
             Spoon House — big serving of hot asian food.<br>
