--- a/stuff.html
+++ b/stuff.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- s/o to alex noddings for writing this website -->
+<!-- not really </3 -->
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -32,33 +34,23 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>RIP9</h4>
-        <!-- <p></p> -->
-
-        <!-- Standard buttons -->
-        <a class="button button-primary" href="https://goo.gl/forms/k5gGrxSgydSGqFxm2">Signups</a>
-        <a class="button button-primary" href="https://paypal.me/ianek">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1sSo7M3njEYauBkRX7a8eePKEJZ7wZeHG0ZJmcQSU6AY/edit#gid=0">Qualifier Signups</a>
-        <br><br>
-        <a class="button button-primary" href="parking.html">Parking</a>
-        <a class="button button-primary" href="http://challonge.com/rip9singles">Bracket</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1IQ9b9zReq6lb6wPNRyS5wD8FRRX4nSBRdjkB0ArqK58/edit#gid=0">Schedule</a>
-
-        <br><br>
-        <a class="button button-primary" href="rip9-itg-singles-rules.pdf">Singles Rules</a>
-        <a class="button button-primary" href="ctr-ruleset.txt">CTR Rules</a>
-        <br><br>
-
-        <a class="button button-primary" href="https://www.dropbox.com/s/v7huhwekt3cn6dr/RIP9%20Qualifiers.zip?dl=1">Qualifier DL</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/bfvkglmlhhvxmx7/DDR%20Illini%20Tournament%20Pack%20V16.zip?dl=1">Singles DL</a>
-        <br><br>
-        <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
-        <a class="button button-primary" href="https://twitch.tv/iananananan">Stream B</a>
-        <br><br>
-        <a class="button button-primary" href="food.html">food!</a>
-        <a class="button button-primary" href="stuff.html">stuff to do!</a>
-        <br><br>
+      <div class="column" style="margin-top: 10%; margin-bottom: 10%">
+        <h4>Stuff to do</h4>
+        <p>Sorted roughly by distance</p>
+        <p>
+          <h5>Close (~Green Street)</h5>
+            Hang in the Rec Room!<br>
+            Illini Union Cafe (chill, has a Starbucks)<br>
+            <br>
+          <h5>Medium — 5-10m walk</h5>
+            (Gym) ARC and/or CRCE, google for open times<br>
+            <br>
+          <h5>You *need* a car Far</h5>
+            (Escape Room) Champaign-Urbana Adventures in Time and Space<br>
+            (Escape Room) Lab Escape<br>
+            (Escape Room) Brainstorm Escapes<br>
+            (Garden) Arboretum and Japan House<br>
+        </p>
       </div>
     </div>
   </div>
