--- a/stuff.html
+++ b/stuff.html
@@ -41,15 +41,21 @@
           <h5>Close (~Green Street)</h5>
             Hang in the Rec Room!<br>
             Illini Union Cafe (chill, has a Starbucks)<br>
+            Stand on the Foellinger Auditorium ground plaque and shout<br>
             <br>
           <h5>Medium — 5-10m walk</h5>
             (Gym) ARC and/or CRCE, google for open times<br>
+            Krannert Art Museum<br>
+            Ice skating rink<br>
             <br>
           <h5>You *need* a car Far</h5>
             (Escape Room) Champaign-Urbana Adventures in Time and Space<br>
             (Escape Room) Lab Escape<br>
             (Escape Room) Brainstorm Escapes<br>
             (Garden) Arboretum and Japan House<br>
+            (Record Swap) Record Store Jeff works at<br>
+            (Hippie Mall) Lincoln Square Mall<br>
+            (Normal Mall) The one in Champaign<br>
         </p>
       </div>
     </div>
