--- a/food.html
+++ b/food.html
@@ -62,8 +62,9 @@
             Fat Sandwich — best drunk food, ok when sober <br>
             Basil Thai — best thai nearby<br>
             Merry Ann's — Traditional american Diner, Tucker's fave<br><br>
+            Maize - second best Mexican nearby<br>
           <h5>You *need* a car Far</h5>
-			Original Pancake House — Sudzi/Brandon's favorite. <br>
+      			Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
             Himilayan Chimney — New indian place<br>
@@ -72,6 +73,7 @@
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Cream and Flutter — cute lil pastry shop<br>
             Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
+            Huaraches Moroleon - best Mexican nearby<br>
             Destihl — Pricier but heckin' delicious lunch/dinner <br>
             Blind Pig — buncha real good locally made beer, but only that.<br>
             Pekara — Reallllly good cafe. Awesome pastries. <br>
