--- a/stuff.html
+++ b/stuff.html
@@ -52,6 +52,7 @@
             (Escape Room) Champaign-Urbana Adventures in Time and Space<br>
             (Escape Room) Lab Escape<br>
             (Escape Room) Brainstorm Escapes<br>
+            (Movie Theater) The Art Theater<br>
             (Garden) Arboretum and Japan House<br>
             (Record Swap) Record Store Jeff works at<br>
             (Hippie Mall) Lincoln Square Mall<br>
