--- a/food.html
+++ b/food.html
@@ -73,6 +73,7 @@
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Cream and Flutter — cute lil pastry shop<br>
             Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
+            El Oasis - Mexican ice cream. Get the spicy chocolate one.<br>
             Huaraches Moroleon - best Mexican nearby<br>
             Destihl — Pricier but heckin' delicious lunch/dinner <br>
             Blind Pig — buncha real good locally made beer, but only that.<br>
