--- a/stuff.html
+++ b/stuff.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- s/o to alex noddings for writing this website -->
-<!-- not really </3 -->
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -48,13 +46,16 @@
             Krannert Art Museum<br>
             Ice skating rink<br>
             <br>
-          <h5>You *need* a car Far</h5>
+          <h5>You *need* a car Far (or bus it)</h5>
             (Escape Room) Champaign-Urbana Adventures in Time and Space<br>
             (Escape Room) Lab Escape<br>
             (Escape Room) Brainstorm Escapes<br>
             (Movie Theater) The Art Theater<br>
             (Garden) Arboretum and Japan House<br>
             (Record Swap) Record Store Jeff works at<br>
+            (Record/Vintage Store) Exile on Main Street<br>
+            (Used Games Shop) Live Action Games<br>
+            (Board/Card Game Playing Place) Titan Games<br>
             (Hippie Mall) Lincoln Square Mall<br>
             (Normal Mall) The one in Champaign<br>
         </p>
