--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+	<!-- see readme.md -->
+
   <head>
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -32,16 +34,23 @@
     {
     var cbs = document.getElementById('checkboxes').getElementsByTagName('input');
     var textareaValue = 0;
+	var total_amount = 0;
     for (var i = 0, len = cbs.length; i<len; i++) {
         if ( cbs[i].type === 'checkbox' && cbs[i].checked) {
               textareaValue += parseInt(cbs[i].value);
+				total_amount = textareaValue;
         }
         if (textareaValue == 38)
         {
           textareaValue = "33: you're entering all the tournaments, so you get $5 off!"
+			total_amount = 33;
         }
       }
        document.getElementById('textarea').value = textareaValue;
+       var link = document.getElementById('the_link')
+       var link_amount = document.getElementById('amount')
+		link.setAttribute('href', 'https://paypal.me/ianek/' + total_amount )
+		link_amount.textContent=total_amount;
       }
     </script>
 
@@ -51,22 +60,33 @@
 	<div class="container">
 		<div class="row">
 			<div class="one-half column" style="margin-top: 10%">
-  <form name="form1" method=post>
-  <textarea id="textarea" name="type" rows="5" cols="35" onclick="this.focus();this.select();"></textarea><br>
-  <div id="checkboxes">
-            <input type="checkbox" id="id1" value="10" onclick="add_sub(this);"> ITG Singles ($10)<br>
-            <input type="checkbox" id="id2" value="10" onclick="add_sub(this);"> ITG Doubles ($10)<br>
-            <input type="checkbox" id="id3" value="5" onclick="add_sub(this);"> Mods SRT ($5)<br>
-            <input type="checkbox" id="id4" value="5" onclick="add_sub(this);"> ITG Couples ($5)<br>
-            <input type="checkbox" id="id5" value="5" onclick="add_sub(this);"> PIU Singles ($5)<br>
-            <input type="checkbox" id="id6" value="3" onclick="add_sub(this);"> Venue Fee ($3)
-  </div>
-  </form>
+				<h3>RIP10 Entry Fee Calculator</h3>
+				Mad shoutouts to Tucker for making this.
+				<br><br>
 
-	<br>
-	Please send this amount here! <a href="http://paypal.me/ianek/">http://paypal.me/ianek/</a>
-	<br><br>
-	Mad shoutouts to Tucker for making this webform.
+			  <form name="form1" method=post>
+				<textarea id="textarea" name="type" rows="5" cols="35" onclick="this.focus();this.select();"></textarea><br>
+			  <div id="checkboxes">
+						<input type="checkbox" id="id1" value="10" onclick="add_sub(this);"> 
+							<label for="id1">ITG Singles ($10)</label><br>
+
+						<input type="checkbox" id="id2" value="10" onclick="add_sub(this);">
+							<label for="id2">ITG Doubles ($10)</label><br>
+						<input type="checkbox" id="id3" value="5" onclick="add_sub(this);">
+							<label for="id3">Mods SRT ($5)<br>
+						<input type="checkbox" id="id4" value="5" onclick="add_sub(this);">
+							<label for="id4">ITG Couples ($5)<br>
+						<input type="checkbox" id="id5" value="5" onclick="add_sub(this);">
+							<label for="id5">PIU Singles ($5)<br>
+						<input type="checkbox" id="id6" value="3" onclick="add_sub(this);">
+							<label for="id6">Venue Fee ($3)
+			  </div>
+			  </form>
+
+				<a id="the_link" href="http://paypal.me/ianek/3">
+					<b>Pay $<span id="amount">3</span> here (PayPal).</b> 
+				</a>
+
 			</div>
 		</div>
 	</div>
