--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -7,7 +7,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>RIP Entry Fee Calculator</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -67,25 +67,27 @@
 			  <form name="form1" method=post>
 				<textarea id="textarea" name="type" rows="5" cols="35" onclick="this.focus();this.select();"></textarea><br>
 			  <div id="checkboxes">
-						<input type="checkbox" id="id1" value="10" onclick="add_sub(this);"> 
-							<label for="id1">ITG Singles ($10)</label><br>
+						<input type="checkbox" id="id1" value="10" onclick="add_sub(this);"> ITG Singles ($10) <br>
+							<!--<label for="id1">ITG Singles ($10)</label><br>-->
 
-						<input type="checkbox" id="id2" value="10" onclick="add_sub(this);">
-							<label for="id2">ITG Doubles ($10)</label><br>
-						<input type="checkbox" id="id3" value="5" onclick="add_sub(this);">
-							<label for="id3">Mods SRT ($5)<br>
-						<input type="checkbox" id="id4" value="5" onclick="add_sub(this);">
-							<label for="id4">ITG Couples ($5)<br>
-						<input type="checkbox" id="id5" value="5" onclick="add_sub(this);">
-							<label for="id5">PIU Singles ($5)<br>
-						<input type="checkbox" id="id6" value="3" onclick="add_sub(this);">
-							<label for="id6">Venue Fee ($3)
+						<input type="checkbox" id="id2" value="10" onclick="add_sub(this);"> ITG Doubles ($10)<br>
+							<!--<label for="id2">ITG Doubles ($10)</label><br>-->
+						<input type="checkbox" id="id3" value="5" onclick="add_sub(this);"> Mods SRT ($5)<br>
+							<!--<label for="id3">Mods SRT ($5)<br>-->
+						<input type="checkbox" id="id4" value="5" onclick="add_sub(this);"> ITG Couples ($5)<br>
+							<!--<label for="id4">ITG Couples ($5)<br>-->
+						<input type="checkbox" id="id5" value="5" onclick="add_sub(this);"> PIU Singles ($5)<br>
+							<!--<label for="id5">PIU Singles ($5)<br>-->
+						<input type="checkbox" id="id6" value="3" onclick="add_sub(this);"> Venue Fee ($3) (required)<br>
+							<!--<label for="id6">Venue Fee ($3)-->
 			  </div>
 			  </form>
 
 				<a id="the_link" href="http://paypal.me/ianek/3">
 					<b>Pay $<span id="amount">3</span> here (PayPal).</b> 
 				</a>
+				<br><br><br><br><br><br>
+
 
 			</div>
 		</div>
