--- a/index.html
+++ b/index.html
@@ -33,28 +33,27 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4>RIP9</h4>
+        <h4>RIP10</h4>
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://goo.gl/forms/k5gGrxSgydSGqFxm2">Signups</a>
-        <a class="button button-primary" href="https://paypal.me/ianek">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1sSo7M3njEYauBkRX7a8eePKEJZ7wZeHG0ZJmcQSU6AY/edit#gid=0">Qualifier Signups</a>
+        <a class="button button-primary" href="https://bit.ly/rip10-signups">Signups</a>
+        <a class="button button-primary" href="http://rip.ddrillini.club/calc.html">Payment</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1cPKBvdMpVlAAhQI7BMxeqB0E0rBja0LJLlXOPoarpwo/edit#gid=0">Schedule</a>
         <br><br>
         <a class="button button-primary" href="parking.html">Parking</a>
-        <a class="button button-primary" href="http://challonge.com/rip9singles">Bracket</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1IQ9b9zReq6lb6wPNRyS5wD8FRRX4nSBRdjkB0ArqK58/edit#gid=0">Schedule</a>
+        <a class="button button-primary" href="http://challonge.com/rip10singles">Bracket</a>
 
         <br><br>
-        <a class="button button-primary" href="rip9-itg-singles-rules.pdf">Singles Rules</a>
-        <a class="button button-primary" href="ctr-ruleset.txt">CTR Rules</a>
+        <!-- <a class="button button-primary" href="rip9-itg-singles-rules.pdf">Singles Rules</a> -->
+        <a class="button button-primary" href="https://www.facebook.com/events/190456844849650/permalink/206724856556182/">PIU Singles Rules</a>
         <br><br>
 
-        <a class="button button-primary" href="https://www.dropbox.com/s/v7huhwekt3cn6dr/RIP9%20Qualifiers.zip?dl=1">Qualifier DL</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/bfvkglmlhhvxmx7/DDR%20Illini%20Tournament%20Pack%20V16.zip?dl=1">Singles DL</a>
+        <a class="button " href="#">Qualifier DL</a>
+        <a class="button button-primary" href="https://bit.ly/rip10-singles">Singles DL</a>
         <br><br>
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
-        <a class="button button-primary" href="https://twitch.tv/iananananan">Stream B</a>
+        <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
