add singles rules

--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
         <a class="button button-primary" href="http://rip.ddrillini.club/calc.html">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1cPKBvdMpVlAAhQI7BMxeqB0E0rBja0LJLlXOPoarpwo/edit#gid=0">Schedule</a>
         <br><br>
-        <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="http://challonge.com/rip10singles">Bracket</a>
 
         <br><br>
-        <!-- <a class="button button-primary" href="rip9-itg-singles-rules.pdf">Singles Rules</a> -->
+        <a class="button button-primary" href="https://docs.google.com/document/d/15UJxlusI14WfmcbcG90zO6LVbmGkgYilrafTLS2tzVE/edit">Singles Rules</a>
         <a class="button button-primary" href="https://www.facebook.com/events/190456844849650/permalink/206724856556182/">PIU Singles Rules</a>
         <br><br>
 
@@ -56,6 +55,7 @@
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
+        <a class="button button-primary" href="parking.html">Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
         <br><br>
       </div>
