update pack dl link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <br><br>
 
         <a class="button " href="#">Qualifier DL</a>
-        <a class="button button-primary" href="https://bit.ly/rip10-singles">Singles DL</a>
+        <a class="button button-primary" href="http://bit.ly/rip10-singles-pack">Singles DL</a>
         <br><br>
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
