--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <a class="button button-primary" href="https://www.facebook.com/events/190456844849650/permalink/206724856556182/">PIU Singles Rules</a>
         <br><br>
 
-        <a class="button " href="#">Qualifier DL</a>
-        <a class="button button-primary" href="http://bit.ly/rip10-singles-pack">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/open?id=1Ynv56e9x09ahuo38FSm7VP_SBau-z7pK">Qualifier DL</a>
+        <a class="button button-primary" href="https://drive.google.com/open?id=1vuidJBUl8y1k2z8bYkONhdxUzGgaNwF2">Singles DL</a>
         <br><br>
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
