--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <br><br>
 
         <a class="button button-primary" href="https://drive.google.com/open?id=1Ynv56e9x09ahuo38FSm7VP_SBau-z7pK">Qualifier DL</a>
-        <a class="button button-primary" href="https://drive.google.com/open?id=1VkxUgpIpS7_WnqP0Kjct3HaAXaV1ssE">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/open?id=1R8N0HEMyufznapFszLFM4WBq_A46BVN0">Singles DL</a>
+        <a class="button button-primary" href="https://drive.google.com/open?id=1jAphRtEmeC3Xb_M1btrVXoKoqpFr5Uv0">Singles DL (with difficulty prefixes)</a>
         <br><br>
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
