--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <a class="button button-primary" href="https://drive.google.com/open?id=1Ynv56e9x09ahuo38FSm7VP_SBau-z7pK">Qualifier DL</a>
         <a class="button button-primary" href="https://drive.google.com/open?id=1R8N0HEMyufznapFszLFM4WBq_A46BVN0">Singles DL</a>
         <a class="button button-primary" href="https://drive.google.com/open?id=1jAphRtEmeC3Xb_M1btrVXoKoqpFr5Uv0">Singles DL (with difficulty prefixes)</a>
+        <a class="button button-primary" href="https://drive.google.com/open?id=0Bx1UYU6oHEGwTzc3YkNNOUU2Wk0">Doubles DL</a>
         <br><br>
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
