--- a/food.html
+++ b/food.html
@@ -37,7 +37,7 @@
         <p>Sorted roughly by distance</p>
         <p>
           <h5>Close (~Green Street)</h5>
-            Wendy's — unofficial sponsor of DDRIllini<br>
+            <s>Wendy's</s> Garbanzo — unofficial sponsor of DDRIllini<br>
             Cravings — Insanely close. Notorious. Beloved. <br>
             Spicy Tang — Naohiro's favorite<br>
             Cocomero — Best froyo you'll ever have, Ian n RedzoneX/Will's favorite <br>
@@ -59,8 +59,9 @@
             Insomnia Cookies — xquatra/Alex's favorite <br>
             Fat Sandwich — best drunk food, ok when sober <br>
             Basil Thai — best thai nearby<br>
-            Merry Ann's — Traditional american Diner, Tucker's fave<br><br>
+            Merry Ann's — Traditional american Diner, Tucker's fave<br>
             Maize - second best Mexican nearby<br>
+			<br>
           <h5>You *need* a car Far</h5>
       			Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
