--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <br><br>
         <a class="button button-primary" href="https://docs.google.com/document/d/15UJxlusI14WfmcbcG90zO6LVbmGkgYilrafTLS2tzVE/edit">Singles Rules</a>
         <a class="button button-primary" href="https://www.facebook.com/events/190456844849650/permalink/206724856556182/">PIU Singles Rules</a>
+        <a class="button button-primary" href="https://www.facebook.com/events/190456844849650/permalink/222559941639340">more PIU Singles Rules</a>
         <br><br>
 
         <a class="button button-primary" href="https://drive.google.com/open?id=1Ynv56e9x09ahuo38FSm7VP_SBau-z7pK">Qualifier DL</a>
