--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
         <a class="button button-primary" href="http://rip.ddrillini.club/calc.html">Payment</a>
         <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1cPKBvdMpVlAAhQI7BMxeqB0E0rBja0LJLlXOPoarpwo/edit#gid=0">Schedule</a>
         <br><br>
-        <a class="button button-primary" href="http://challonge.com/rip10singles">Bracket</a>
+        <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
+        <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1cdUuioi1owB168o0gX6KLrEtYSsp7aeSWEd3-u-DJ1A/edit?usp=sharing">Bracket</a>
 
+        <br><br>
+        <a class="button button-primary" href="food.html">food!</a>
+        <a class="button button-primary" href="parking.html">Parking</a>
+        <a class="button button-primary" href="stuff.html">stuff to do!</a>
+		<br><br>
         <br><br>
         <a class="button button-primary" href="https://docs.google.com/document/d/15UJxlusI14WfmcbcG90zO6LVbmGkgYilrafTLS2tzVE/edit">Singles Rules</a>
         <a class="button button-primary" href="https://www.facebook.com/events/190456844849650/permalink/206724856556182/">PIU Singles Rules</a>
@@ -53,13 +60,6 @@
         <a class="button button-primary" href="https://drive.google.com/open?id=1R8N0HEMyufznapFszLFM4WBq_A46BVN0">Singles DL</a>
         <a class="button button-primary" href="https://drive.google.com/open?id=1jAphRtEmeC3Xb_M1btrVXoKoqpFr5Uv0">Singles DL (with difficulty prefixes)</a>
         <a class="button button-primary" href="https://drive.google.com/open?id=0Bx1UYU6oHEGwTzc3YkNNOUU2Wk0">Doubles DL</a>
-        <br><br>
-        <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
-        <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
-        <br><br>
-        <a class="button button-primary" href="food.html">food!</a>
-        <a class="button button-primary" href="parking.html">Parking</a>
-        <a class="button button-primary" href="stuff.html">stuff to do!</a>
         <br><br>
       </div>
     </div>
