--- a/food.html
+++ b/food.html
@@ -66,6 +66,7 @@
       			Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
+			Xinh Xinh Cafe - Vietnamese<br>
             Himilayan Chimney — New indian place<br>
             Sushi Kame — great sushi, bento boxes<br>
             Dublin O'Neil's — Irish pub, real fish n chips<br>
