--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4>RIP10</h4>
+        <h4>RIP</h4>
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
