--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4>RIP</h4>
+        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament, <a href="https://www.facebook.com/events/190456844849650/">event page</a></p>
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
