update payment links on entry fee calc

--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -49,7 +49,7 @@
        document.getElementById('textarea').value = textareaValue;
        var link = document.getElementById('the_link')
        var link_amount = document.getElementById('amount')
-		link.setAttribute('href', 'https://paypal.me/ianek/' + total_amount )
+		link.setAttribute('href', 'https://paypal.me/ddrillini/' + total_amount )
 		link_amount.textContent=total_amount;
       }
     </script>
@@ -81,8 +81,8 @@
 			  </form>
 
 				<a id="the_link" href="http://paypal.me/ianek/3">
-					<b>Pay $<span id="amount">3</span> here (PayPal).</b> 
-				</a>
+					<b>Pay $<span id="amount">3</span> here (PayPal).</b>
+				</a> or Venmo @ddrillini.
 				<br><br><br><br><br><br>
         Mad shoutouts to Tucker for making this.
         <br><br>
