--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament, <a href="https://www.facebook.com/events/190456844849650/">event page</a></p>
+        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament, <a href="https://www.facebook.com/events/701373773366484/">event page</a></p>
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        #<a class="button" href="https://bit.ly/rip10-signups">Signups</a>
-        #<a class="button" href="http://rip.ddrillini.club/calc.html">Payment</a>
-        #<a class="button" href="https://docs.google.com/spreadsheets/d/1cPKBvdMpVlAAhQI7BMxeqB0E0rBja0LJLlXOPoarpwo/edit#gid=0">Schedule</a>
+        <a class="button" href="#">Signups</a>
+        <a class="button" href="#">Payment</a>
+        <a class="button" href="#">Schedule</a>
         <br><br>
 	      
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
@@ -53,10 +53,10 @@
 	<br><br>
         
 
-        #<a class="button" href="https://drive.google.com/open?id=1Ynv56e9x09ahuo38FSm7VP_SBau-z7pK">Qualifier DL</a>
-        #<a class="button" href="https://drive.google.com/open?id=1R8N0HEMyufznapFszLFM4WBq_A46BVN0">Singles DL</a>
-        #<a class="button" href="https://drive.google.com/open?id=1jAphRtEmeC3Xb_M1btrVXoKoqpFr5Uv0">Singles DL (with difficulty prefixes)</a>
-        #<a class="button" href="https://drive.google.com/open?id=0Bx1UYU6oHEGwTzc3YkNNOUU2Wk0">Doubles DL</a>
+        <a class="button" href="#">Qualifier DL</a>
+        <a class="button" href="#">Singles DL</a>
+        <a class="button" href="#">Singles DL (with difficulty prefixes)</a>
+        <a class="button" href="#">Doubles DL</a>
         <br><br>
       </div>
     </div>
