update default paypal link

--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -80,7 +80,7 @@
 			  </div>
 			  </form>
 
-				<a id="the_link" href="http://paypal.me/ianek/3">
+				<a id="the_link" href="http://paypal.me/ddrillini/3">
 					<b>Pay $<span id="amount">3</span> here (PayPal).</b>
 				</a> or Venmo @ddrillini.
 				<br><br><br><br><br><br>
