--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -40,10 +40,10 @@
               textareaValue += parseInt(cbs[i].value);
 				total_amount = textareaValue;
         }
-        if (textareaValue == 38)
+        if (textareaValue == 33)
         {
-          textareaValue = "33: you're entering all the tournaments, so you get $5 off!"
-			total_amount = 33;
+          textareaValue = "28: you're entering all the tournaments, so you get $5 off!"
+			total_amount = 28;
         }
       }
        document.getElementById('textarea').value = textareaValue;
@@ -71,10 +71,8 @@
 							<!--<label for="id2">ITG Doubles ($10)</label><br>-->
 						<input type="checkbox" id="id3" value="5" onclick="add_sub(this);"> Mods SRT ($5)<br>
 							<!--<label for="id3">Mods SRT ($5)<br>-->
-						<input type="checkbox" id="id4" value="5" onclick="add_sub(this);"> ITG Couples ($5)<br>
+						<input type="checkbox" id="id4" value="5" onclick="add_sub(this);"> PIU Couples ($5)<br>
 							<!--<label for="id4">ITG Couples ($5)<br>-->
-						<input type="checkbox" id="id5" value="5" onclick="add_sub(this);"> PIU Singles ($5)<br>
-							<!--<label for="id5">PIU Singles ($5)<br>-->
 						<input type="checkbox" id="id6" value="3" onclick="add_sub(this);"> Venue Fee ($3) (required)<br>
 							<!--<label for="id6">Venue Fee ($3)-->
 			  </div>
