--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button" href="#">Signups</a>
-        <a class="button" href="#">Payment</a>
+        <a class="button button-primary" href="https://goo.gl/forms/1cQXREs96OxIx0U62">Signups</a>
+        <a class="button button-primary" href="http://rip.ddrillini.club/calc.html">Payment</a>
         <a class="button" href="#">Schedule</a>
         <br><br>
 	      
