--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	      
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1cdUuioi1owB168o0gX6KLrEtYSsp7aeSWEd3-u-DJ1A/edit?usp=sharing">Bracket</a>
+        <a class="button" href="#">Bracket</a>
 
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
@@ -54,9 +54,8 @@
         
 
         <a class="button" href="#">Qualifier DL</a>
-        <a class="button" href="#">Singles DL</a>
-        <a class="button" href="#">Singles DL (with difficulty prefixes)</a>
-        <a class="button" href="#">Doubles DL</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/k0s92ynv4h4q42z/RIP10.5.zip?dl=0">Singles (partial) DL</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/240xa74998d7qyu/Doubles%20Tournament%20Expansion%20v7.zip?dl=0">Doubles DL</a>
         <br><br>
       </div>
     </div>
