--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
 
         <a class="button" href="#">Qualifier DL</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/k0s92ynv4h4q42z/RIP10.5.zip?dl=0">Singles (partial) DL</a>
+	<a class="button button-primary" href="https://goo.gl/forms/e8G3EpkPVow5yqea2">Singles Additions</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/240xa74998d7qyu/Doubles%20Tournament%20Expansion%20v7.zip?dl=0">Doubles DL</a>
-        <br><br>
+	<a class="button button-primary" href="https://docs.google.com/document/d/1Z3RRmxtMj1LhqJyEcsqqbkdMACqZmMoLZgPGSoqMxJ8/edit">Singles Rules</a>
+        <a class="button" href="#">Doubles Rules</a>
+	<br><br>
       </div>
     </div>
   </div>
