--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -80,7 +80,7 @@
 
 				<a id="the_link" href="http://paypal.me/ddrillini/3">
 					<b>Pay $<span id="amount">3</span> here (PayPal).</b>
-				</a> or Venmo @ddrillini.
+				</a> or Venmo @aipark.
 				<br><br><br><br><br><br>
         Mad shoutouts to Tucker for making this.
         <br><br>
