--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<a class="button button-primary" href="https://goo.gl/forms/e8G3EpkPVow5yqea2">Singles Additions</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/240xa74998d7qyu/Doubles%20Tournament%20Expansion%20v7.zip?dl=0">Doubles DL</a>
 	<a class="button button-primary" href="https://docs.google.com/document/d/1Z3RRmxtMj1LhqJyEcsqqbkdMACqZmMoLZgPGSoqMxJ8/edit">Singles Rules</a>
-        <a class="button" href="#">Doubles Rules</a>
+        <a class="button button-primary" href="https://drive.google.com/file/d/13j0iasU-UgjuUK2d3NzKcw2E676AK-bZ/view?usp=sharing">Doubles Rules</a>
 	<br><br>
       </div>
     </div>
