--- a/card-draw/card-draw.html
+++ b/card-draw/card-draw.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head><title>meme dreem</title></head>
+    <head>
+        <title>h</title>
+        <link rel="stylesheet" href="card-draw.css">
+    </head>
     <body>
         <script src="card-draw.js"></script>
 
-        <h4>How many?</h4>
+        How many?
 
         <!-- <input type="button" name="h">FIVE</input> -->
 
-        <form action="javascript:draw(5)">
-            <input type="submit" value="FIVE">
-        </form>
-
-        <form action="javascript:draw(7)">
-            <input type="submit" value="SEVEN">
-        </form>
+        <input type="submit" class='button' value="FIVE" onclick="javascript:draw(5)">
+        <input type="submit" class="button" value="SEVEN" onclick="javascript:draw(7)">
 
         <hr>
 
