implement back button

--- a/card-draw/card-draw.html
+++ b/card-draw/card-draw.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>h</title>
+        <title>card draw</title>
         <link rel="stylesheet" href="card-draw.css">
     </head>
     <body>
-        <script src="card-draw.js"></script>
 
         How many?
 
@@ -14,9 +13,12 @@
         <input type="submit" class='button' value="FIVE" onclick="javascript:draw(5)">
         <input type="submit" class="button" value="SEVEN" onclick="javascript:draw(7)">
 
+        <input type="submit" class="button" value="fuck go back" onclick="javascript:fuck_go_back()" style="float: right;">
+
         <hr>
 
         <div id="card-area"></div>
 
+        <script src="card-draw.js"></script>
     </body>
 </html>
