--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Standard buttons -->
         <a class="button button-primary" href="https://goo.gl/forms/1cQXREs96OxIx0U62">Signups</a>
         <a class="button button-primary" href="http://rip.ddrillini.club/calc.html">Payment</a>
-        <a class="button" href="#">Schedule</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/17J7sBYOi8toXscLjjGik5fjujjdujTDb_5Yay-YQ1XA/edit?usp=sharing">Schedule</a>
         <br><br>
 	      
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
