--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 	      
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
-        <a class="button" href="#">Bracket</a>
+        <a class="button button-primary" href="https://challonge.com/rip10_5uppers">Upper Bracket</a>
+	<a class="button button-primary" href="https://challonge.com/rip10_5lowers">Lower Bracket</a>
 
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
