--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
         <a class="button button-primary" href="https://challonge.com/rip10_5uppers">Upper Bracket</a>
 	<a class="button button-primary" href="https://challonge.com/rip10_5lowers">Lower Bracket</a>
+	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/12ioDRVbGhQDKEC88SdAhOnWZMwIJ-hOhVCkEsIYWhWA/edit?usp=sharing">Qualifier/Singles Pools</a>
 
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
