--- a/card-draw/card-draw.html
+++ b/card-draw/card-draw.html
@@ -16,6 +16,8 @@
         <div style="float: right;">
             <input id="Undo" type="submit" class="button" value="Undo" onclick="javascript:fuck_go_back()">
             <input id="Redo" type="submit" class="button" value="Redo" onclick="javascript:fuck_go_forward()">
+            
+            <input type="submit" class="button" value="Send" onclick="javascript:webhook()">
         </div>
 
         <hr>
