--- a/food.html
+++ b/food.html
@@ -66,10 +66,11 @@
       			Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
-			Xinh Xinh Cafe - Vietnamese<br>
+      			Xinh Xinh Cafe - Vietnamese<br>
             Himilayan Chimney — New indian place<br>
             Sushi Kame — great sushi, bento boxes<br>
             Dublin O'Neil's — Irish pub, real fish n chips<br>
+            Farren's — borgers
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Cream and Flutter — cute lil pastry shop<br>
             Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
