--- a/food.html
+++ b/food.html
@@ -70,7 +70,7 @@
             Himilayan Chimney — New indian place<br>
             Sushi Kame — great sushi, bento boxes<br>
             Dublin O'Neil's — Irish pub, real fish n chips<br>
-            Farren's — borgers
+            Farren's — borgers<br>
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Cream and Flutter — cute lil pastry shop<br>
             Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
