--- a/food.html
+++ b/food.html
@@ -46,7 +46,6 @@
             Jip Bap — Korean Bowls, Benpai's favorite<br>
             Spoon House — big serving of hot asian food.<br>
             Jerusalem Grill — Peter's favorite <br>
-            Seoul Taco — do you like tacos? do you like bulgogi? yes.<br>
             Empire — big servings chinese <br>
             Firehaus — Bar, good wraps <br>
             Legends — Bar, good burgers and beer specials on friday <br>
@@ -63,6 +62,7 @@
             Maize - second best Mexican nearby<br>
 			<br>
           <h5>You *need* a car Far</h5>
+            Bangkok Thai - also good thai nearby
       			Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
