--- a/index.html
+++ b/index.html
@@ -33,20 +33,21 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
-        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament, <a href="https://www.facebook.com/events/701373773366484/">event page</a></p>
+        <h4 style="display:inline">RIP</h4> <p>uiuc dance game tournament, <a href="https://www.facebook.com/events/184622442460015/?active_tab=about">event page</a></p>
         <!-- <p></p> -->
 
         <!-- Standard buttons -->
-        <a class="button button-primary" href="https://goo.gl/forms/1cQXREs96OxIx0U62">Signups</a>
-        <a class="button button-primary" href="http://rip.ddrillini.club/calc.html">Payment</a>
-        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/17J7sBYOi8toXscLjjGik5fjujjdujTDb_5Yay-YQ1XA/edit?usp=sharing">Schedule</a>
+        <a class="button" href="">Signups</a>
+        <a class="button" href="">Payment</a>
+        <a class="button button-primary" href="https://docs.google.com/spreadsheets/d/1z3Cxyfxx8wEDnevehHGDVnmTDJUkLofkPkeRmodyyYg/edit?usp=sharing">Schedule</a>
         <br><br>
 	      
         <a class="button button-primary" href="https://twitch.tv/sudzi">Stream A</a>
         <a class="button button-primary" href="https://twitch.tv/ian5v">Stream B</a>
-        <a class="button button-primary" href="https://challonge.com/rip10_5uppers">Upper Bracket</a>
-	<a class="button button-primary" href="https://challonge.com/rip10_5lowers">Lower Bracket</a>
-	<a class="button button-primary" href="https://docs.google.com/spreadsheets/d/12ioDRVbGhQDKEC88SdAhOnWZMwIJ-hOhVCkEsIYWhWA/edit?usp=sharing">Qualifier/Singles Pools</a>
+        <a class="button" href="">Upper Bracket</a>
+	<a class="button" href="">Middle Bracket</a>
+	<a class="button" href="">Lower Bracket</a>
+	<a class="button" href="">Qualifier/Singles Pools</a>
 
         <br><br>
         <a class="button button-primary" href="food.html">food!</a>
@@ -55,12 +56,11 @@
 	<br><br>
         
 
-        <a class="button button-primary" href="https://www.dropbox.com/s/rmt9wa5k3hhsy4z/RIP10.5%20Qualifiers.zip?dl=0">Qualifier DL</a>
-        <a class="button button-primary" href="https://www.dropbox.com/s/k0s92ynv4h4q42z/RIP10.5.zip?dl=0">Singles DL</a>
-	<a class="button button-primary" href="https://goo.gl/forms/e8G3EpkPVow5yqea2">Singles Additions</a>
+        <a class="button" href="">Qualifier DL</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/v21bekoqdrlo055/RIP11%20Singles.zip?dl=0">Singles DL</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/240xa74998d7qyu/Doubles%20Tournament%20Expansion%20v7.zip?dl=0">Doubles DL</a>
-	<a class="button button-primary" href="https://docs.google.com/document/d/1Z3RRmxtMj1LhqJyEcsqqbkdMACqZmMoLZgPGSoqMxJ8/edit">Singles Rules</a>
-        <a class="button button-primary" href="https://drive.google.com/file/d/13j0iasU-UgjuUK2d3NzKcw2E676AK-bZ/view?usp=sharing">Doubles Rules</a>
+	<a class="button button-primary" href="https://docs.google.com/document/d/1ViOIIRnzXbSaoDvqRoiKxuF6jRiLvgxSRuqSE2M7ht8/edit?usp=sharing">Singles Rules</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/fd188km2e7y8gjv/doubles_ruleset_rip11.pdf?dl=0">Doubles Rules</a>
 	<br><br>
       </div>
     </div>
