--- a/food.html
+++ b/food.html
@@ -37,17 +37,15 @@
         <p>Sorted roughly by distance</p>
         <p>
           <h5>Close (~Green Street)</h5>
-            <s>Wendy's</s> Garbanzo — unofficial sponsor of DDRIllini<br>
-            Cravings — Insanely close. Notorious. Beloved. <br>
-            Spicy Tang — Naohiro's favorite<br>
+            <s>Wendy's</s> Garbanzo's — unofficial sponsor of DDRIllini<br>
+            Cravings — Insanely close. Notorious. Beloved. Not open on Sunday. <br>
+            Spicy Tang — Naohiro's favorite, mostly dry & soupy hot pot<br>
             Cocomero — Best froyo you'll ever have, Ian n RedzoneX/Will's favorite <br>
             Paris Super — Thai ice cream and ice cream crepes. Close contender for best ice cream. <br>
             Ozu Ramen — StoryTime/Kristian's favorite <br>
-            Jip Bap — Korean Bowls, Benpai's favorite<br>
-            Spoon House — big serving of hot asian food.<br>
+            Jip Bap — Korean bowls, extremely affordable for the amount of food, Benpai's favorite<br>
+            Spoon House — big serving of hot Korean food.<br>
             Jerusalem Grill — Peter's favorite <br>
-            Empire — big servings chinese <br>
-            Firehaus — Bar, good wraps <br>
             Legends — Bar, good burgers and beer specials on friday <br>
             Joes — Bar, good burgers<br>
             <br>
@@ -55,19 +53,20 @@
             Ko Fusion — ok sushi <br>
             Sakanaya — better sushi, pricey <br>
             M Sushi — best sushi, cheaper than Sakanaya, <b>far</b> <br>
+	    Lai Lai Wok, Mandarin Wok, Mr. Chou and Charles — big servings Chinese <br>
             Insomnia Cookies — xquatra/Alex's favorite <br>
             Fat Sandwich — best drunk food, ok when sober <br>
-            Basil Thai — best thai nearby<br>
+            Basil Thai — best Thai nearby<br>
+	    Bangkok Thai — arguablly better Thai for Benpai<br>
             Merry Ann's — Traditional american Diner, Tucker's fave<br>
             Maize - second best Mexican nearby<br>
 			<br>
           <h5>You *need* a car Far</h5>
-            Bangkok Thai - also good thai nearby
-      			Original Pancake House — Sudzi/Brandon's favorite. <br>
+      	    Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
             Black Dog — Best BBQ in Champaign <br>
       			Xinh Xinh Cafe - Vietnamese<br>
-            Himilayan Chimney — New indian place<br>
+            Himalayan Chimney — New indian place<br>
             Sushi Kame — great sushi, bento boxes<br>
             Dublin O'Neil's — Irish pub, real fish n chips<br>
             Farren's — borgers<br>
