--- a/card-draw/card-draw.html
+++ b/card-draw/card-draw.html
@@ -3,6 +3,7 @@
     <head>
         <title>card draw</title>
         <link rel="stylesheet" href="card-draw.css">
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     </head>
     <body>
 
