--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<br><br>
         
 
-        <a class="button" href="">Qualifier DL</a>
+        <a class="button button-primary" href="https://www.dropbox.com/s/7ob2ijafr95s4dc/RIP11%20Singles%20Qualifiers.zip?dl=0">Qualifier DL</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/v21bekoqdrlo055/RIP11%20Singles.zip?dl=0">Singles DL</a>
         <a class="button button-primary" href="https://www.dropbox.com/s/240xa74998d7qyu/Doubles%20Tournament%20Expansion%20v7.zip?dl=0">Doubles DL</a>
 	<a class="button button-primary" href="https://docs.google.com/document/d/1ViOIIRnzXbSaoDvqRoiKxuF6jRiLvgxSRuqSE2M7ht8/edit?usp=sharing">Singles Rules</a>
