--- a/card-draw/card-draw.html
+++ b/card-draw/card-draw.html
@@ -2,29 +2,28 @@
 <html>
     <head>
         <title>card draw</title>
-        <link rel="stylesheet" href="card-draw.css">
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <link rel="stylesheet" href="card-draw.css">
+        <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="card-draw.js"></script>
     </head>
     <body>
-
-        How many?
-
-        <!-- <input type="button" name="h">FIVE</input> -->
-
-        <input type="submit" class='button' value="FIVE" onclick="javascript:draw(5)">
-        <input type="submit" class="button" value="SEVEN" onclick="javascript:draw(7)">
+        <div class="title_card">RIP 11</div>
+        <input id="draw5" type="submit" class="button" value="Draw 5">
+        <input id="draw7" type="submit" class="button" value="Draw 7">
 
         <div style="float: right;">
-            <input id="Undo" type="submit" class="button" value="Undo" onclick="javascript:fuck_go_back()">
-            <input id="Redo" type="submit" class="button" value="Redo" onclick="javascript:fuck_go_forward()">
-            
-            <input type="submit" class="button" value="Send" onclick="javascript:webhook()">
+            <input id="undo" type="submit" class="button" value="Undo">
+            <input id="redo" type="submit" class="button" value="Redo">
+
+            <input id="submit" type="submit" class="button" value="Send">
         </div>
 
         <hr>
 
-        <div id="card-area"></div>
+        <div id="card-area">
 
-        <script src="card-draw.js"></script>
+        </div>
+
     </body>
 </html>
