--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -71,8 +71,8 @@
 							<!--<label for="id2">ITG Doubles ($10)</label><br>-->
 						<input type="checkbox" id="id3" value="5" onclick="add_sub(this);"> Mods SRT ($5)<br>
 							<!--<label for="id3">Mods SRT ($5)<br>-->
-						<input type="checkbox" id="id4" value="10" onclick="add_sub(this);"> PIU Couples ($10)<br>
-							<!--<label for="id4">ITG Couples ($10)<br>-->
+						<input type="checkbox" id="id4" value="5" onclick="add_sub(this);"> ITG Couples ($5)<br>
+							<!--<label for="id4">ITG Couples ($5)<br>-->
 						<input type="checkbox" id="id6" value="8" onclick="add_sub(this);"> Venue Fee ($8) (required)<br>
 							<!--<label for="id6">Venue Fee ($8)-->
 			  </div>
