--- a/entry-fee-calculator/entrycalc.html
+++ b/entry-fee-calculator/entrycalc.html
@@ -60,7 +60,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="one-half column" style="margin-top: 10%">
-				<h3>RIP11 Entry Fee Calculator</h3>
+				<h3>RIP11 Calculator</h3>
 			  <form name="form1" method=post>
 				<textarea id="textarea" name="type" rows="5" cols="35" onclick="this.focus();this.select();"></textarea><br>
 			  <div id="checkboxes">
@@ -75,6 +75,15 @@
 							<!--<label for="id4">ITG Couples ($5)<br>-->
 						<input type="checkbox" id="id6" value="8" onclick="add_sub(this);"> Venue Fee ($8) (required)<br>
 							<!--<label for="id6">Venue Fee ($8)-->
+<!-- 						<input type="checkbox" id="id6" value="20" onclick="add_sub(this);"> Shirt #1 ($20) (required)<br>
+							<!--<label for="id6">Shirt ($20)-->
+				 		<input type="checkbox" id="id6" value="20" onclick="add_sub(this);"> Shirt #2 (if applicable, $20) (required)<br>
+							<!--<label for="id6">Shirt ($20)-->
+				 		<input type="checkbox" id="id6" value="20" onclick="add_sub(this);"> Shirt #3 (if applicable, $20) (required)<br>
+							<!--<label for="id6">Shirt ($20)-->
+				 		<input type="checkbox" id="id6" value="20" onclick="add_sub(this);"> Poster  (if applicable, $15) (required)<br>
+							<!--<label for="id6">Poster ($15)--> -->
+				  
 			  </div>
 			  </form>
 
