--- a/rip11/payment.html
+++ b/rip11/payment.html
@@ -32,14 +32,8 @@
 
   </head>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript">
-  
-
-  
-  </script>
-  
 <body>
+fix attempt cache?
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 10%">
