--- a/rip11/prereg.html
+++ b/rip11/prereg.html
@@ -33,6 +33,7 @@
   </head>
 
 <body>
+(test)
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 10%">
