everything should be fixed
things are very tempremental with google api things

--- a/rip11/payment.html
+++ b/rip11/payment.html
@@ -46,6 +46,9 @@
 				<br><hr>
 					   Though we will accept cash at the event, please pay online if you can. 
 				If you prefer or require some other method of sending money, please contact Benjamin Tung at <a href="http://messenger.com/t/noticemebenpai">messenger.com/t/noticemebenpai</a>, or <b>benjamintung21@gmail.com</b>
+				
+				<br><hr>
+				As this is a new system, there may be flaws in the registration.  As such, we encourage you to comment on the event saying that you've registered, just so that we may double check that we have you in the system.
 			</div>
 		</div>
 	</div>
